2008-0-02 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file_itunesdb (gp_import_itdb): fix memory leak. Thanks to
	  Andrea.

	* src/prefs.c (prefs_get_cfgdir): fix possible memory leak. Thanks
	  to Andrea.

	* src/prefs.c (temp_prefs_load): fix memory leaks. Thanks to
	  Andrea.

	* src/misc.c (load_ipod_index_prefs): fix memory leaks. Thanks to
	  Andrea.

2008-07-21 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/misc_confirm (on_gtkpod_delete_event): return TRUE to
	  prevent other handlers from being called. (Tons of error
	  messages otherwise.)

2008-07-20 Paul Richardson <phantom_sf at users.sourceforge.net>

	* src/display_photo.c:
	Patch to stop photo action signals being added to actions
	multiple times. Thanks to Andrea.

2008-07-20 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/fileselection.c
	  src/fileselection.h: restructure code. Thanks to Andrea.

2008-07-19 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file_itunesdb.c (data_changed): don't mark non-imported
          iPods as changed. Thanks to Andrea.

2008-07-19 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/confirmation.c (gtkpod_confirmation): initialize
          <scrolled> variable. Thanks to Andrea.

2008-07-19 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_playlists.c (pm_add_child): when adding
          playlists to the end, don't add behind the Photo item.

2008-07-18 P.G. Richardson <phantom_sf at users.sourceforge.net>

	* src/file.c (get_track_info_from_file): 
	Relating to previous change. Rather than comment out, have reversed
	logic as per Michael Tiffany's patch (15/07/2008)

2008-07-18 P.G. Richardson <phantom_sf at users.sourceforge.net>

	* src/file.c (get_track_info_from_file): 
	Commented out test itdb_track_has_thumbnails test on line 1418
	as this stops coverart being added to new tracks as they are being
	imported from directory.

2008-07-06 Jorg Schuler <jcsjcs at users.sourceforge.net>
